--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Photo-file | Horone | Hedrine</title>
 </head>
 <body>
-
+<header>
+  <div class="container">
+  </div>
+</header>
   <!-- navbar -->
 
   <!-- photo / grid -->
